--- a/KKProgram Client/report.xaml
+++ b/KKProgram Client/report.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KKProgram_Client"
         mc:Ignorable="d"
-        Title="Отчёт" Width="1070" Height="500" MinHeight="140" MinWidth="420" >
+        Title="Отчёт" WindowStartupLocation="CenterScreen" Width="1070" Height="500" MinHeight="140" MinWidth="420" >
     <Window.Resources>
         <Style TargetType="MenuItem">
             <Setter Property="Margin" Value="3"/>
